# SnipeIT-PythonAPI

./: .flake8  Pipfile  bandit.yaml  pyproject.toml
snipeit/: Assets.py  Company.py  Fieldsets.py  Manufacturers.py  Models.py  StatusLabels.py  Users.py
